--- a/config.toml
+++ b/config.toml
@@ -51,11 +51,11 @@ defaultContentLanguageInSubdir = false
 
   # Your details.
   name = "Jesse Maegan"
-  role = "TBD"
+  #role = "TBD"
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
-  organizations = [ { name = "Teaching Trust", url = "" } ]
+  organizations = [ { name = "A site dedicated to helping learners develop data science skills in R", url = "" } ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
@@ -249,8 +249,8 @@ defaultContentLanguageInSubdir = false
   weight = 1
 
 [[menu.main]]
-  name = "Talks & Workshops"
-  url = "#talks_and_workshops"
+  name = "Publications"
+  url = "#publications"
   weight = 2
 
 [[menu.main]]
