--- a/config.toml
+++ b/config.toml
@@ -218,10 +218,10 @@ defaultContentLanguageInSubdir = false
   #
   #   Full list: https://jpswalsh.github.io/academicons/
 
-  [[params.social]]
-    icon = "envelope"
-    icon_pack = "fa"
-    link = "mailto:jesse.maegan@gmail.com"
+  #[[params.social]]
+    #icon = "envelope"
+    #icon_pack = "fa"
+    #link = "mailto:jesse.maegan@gmail.com"
 
   [[params.social]]
     icon = "twitter"
