--- a/config.toml
+++ b/config.toml
@@ -27,7 +27,7 @@ relativeurls = true
 disqusShortname = ""
 
 # Enable analytics by entering your Google Analytics tracking ID
-googleAnalytics = ""
+googleAnalytics = "UA-114721555-1"
 
 # Default language to use (if you setup multilingual support)
 defaultContentLanguage = "en"
