updated config and about

--- a/config.toml
+++ b/config.toml
@@ -236,7 +236,7 @@ defaultContentLanguageInSubdir = false
   [[params.social]]
     icon = "github"
     icon_pack = "fa"
-    link = "//github.com/jmostipak"
+    link = "//github.com/kierisi"
 
 
 # Navigation Links
