updated photo and role

--- a/config.toml
+++ b/config.toml
@@ -54,7 +54,7 @@ defaultContentLanguageInSubdir = false
 
   # Your details.
   name = "Jesse Mostipak"
-  role = "Managing Director, Data Science"
+  role = "Developer Advocate || Kaggle"
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
