should be updated!

--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@
 baseURL = "https://jessemaegan.com/"
 languageCode = "en"
 theme = "hugo-apero"
-title = "Blag"
+title = ""
 author = "Jesse Mostipak"
 copyright = "" # set to override the auto generated copyright using org info and now year
 googleAnalytics = ""
@@ -30,11 +30,11 @@ enableEmoji = true
     style = "github"
     
 [params]
-#  orgName = "RStudio"
+  orgName = "RStudio"
   orgLocal = "Anywhere"
   description = "A modern, beautiful, and easily configurable blog theme for Hugo."
   favicon = "/img/favicon.ico"
-  logo = "/img/blogophonic-mark-dark.png"
+  #logo = "/img/blogophonic-mark-dark.png"
   mainSections = ["blog", "project", "talk"]
   navallcaps = true
   # show/hide social icons in site header & footer
@@ -50,7 +50,7 @@ enableEmoji = true
   # use a built-in color theme
   # one of: forest / grayscale / peach / plum /
   #         poppy / sky / violet / water 
-  theme = "forest"
+  theme = "sky"
   
   # or, leave theme empty & make your own palette
   # see docs at https://hugo-apero.netlify.app/blog/color-themes/
@@ -86,7 +86,7 @@ enableEmoji = true
   [[params.social]]
       icon      = "github" # icon name without the 'fa-'
       icon_pack = "fab"
-      url       = "https://github.com/hugo-apero/apero"
+      url       = "https://github.com/kierisi"
 #  [[params.social]]
 #      icon      = "facebook-square" # icon name without the 'fa-'
 #      icon_pack = "fab"
@@ -112,7 +112,7 @@ enableEmoji = true
 [menu]
   [[menu.header]]
     name = "About"
-    title = "About Apéro"
+    title = "About Jesse"
     url = "/about/"
     weight = 1
   [[menu.header]]
@@ -135,11 +135,11 @@ enableEmoji = true
     title = "A collection"
     url = "/collection/"
     weight = 5
-  [[menu.header]]
-    name = "Elements"
-    title = "Element Page"
-    url = "/elements/"
-    weight = 6
+  #[[menu.header]]
+    #name = "Elements"
+    #title = "Element Page"
+    #url = "/elements/"
+    #weight = 6
 
 # see https://gohugo.io/about/hugo-and-gdpr/    
 [privacy]
