--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://jessemaegan.com"
+baseURL: "/"
 languageCode: en
 theme: hugo-apero
 title: Hugo Apéro
@@ -36,7 +36,7 @@ params:
   description: A modern, beautiful, and easily configurable blog theme for Hugo.
   favicon: /img/favicon.ico
   headingFontFamily: sans-serif
-  logo: /img/blogophonic-mark-dark.png
+  logo: #/img/blogophonic-mark-dark.png
   mainSections:
     - blog
     - project
