--- a/config.toml
+++ b/config.toml
@@ -82,7 +82,7 @@ enableEmoji = true
   # Icon pack "fas" includes solid icons, see: https://fontawesome.com/icons?d=gallery&s=solid&m=free
   # Icon pack "far" includes regular icons, see: https://fontawesome.com/icons?d=gallery&s=regular&m=free
   [[params.social]]
-      icon      = "twitter" # icon name without the 'fa-'
+      icon      = "twitter-square" # icon name without the 'fa-'
       icon_pack = "fab"
       url       = "https://twitter.com/kierisi"
   [[params.social]]
