commenting out elements

--- a/config.toml
+++ b/config.toml
@@ -129,11 +129,11 @@ enableEmoji = true
    # title = "A collection"
    # url = "/collection/"
    # weight = 5
-  [[menu.header]]
-    name = "Elements"
-    title = "Element Page"
-    url = "/elements/"
-    weight = 6
+  # [[menu.header]]
+  #  name = "Elements"
+  #  title = "Element Page"
+  #  url = "/elements/"
+  #  weight = 6
 
   # Configure footer  
   [[menu.footer]]
